# Nuitrack

./: README.md
NewApp/: CMakeCache.txt  CMakeLists.txt  NewApp  NewApp.cpp
Nuitrack interface with Raspberry Pi/: CMakeLists.txt  NewApp  NewApp.cpp
